Fix alignment of cards

--- a/_sass/all.scss
+++ b/_sass/all.scss
@@ -9,7 +9,7 @@
 
 .card-container {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   font-family: "Open Sans", sans-serif;
 }
 
